#
# ParaStation
#
# Copyright (C) 2013-2017 ParTec Cluster Competence Center GmbH, Munich
#
# This file may be distributed under the terms of the Q Public License
# as defined in the file LICENSE.QPL included in the packaging of this
# file.
#

include $(top_srcdir)/common.am

SUBDIRS = doc src/include src/pbs src/psmom

dist_noinst_DATA = LICENSE.OpenPBS README ChangeLog-History
