#
# ParaStation
#
# Copyright (C) 2014-2020 ParTec Cluster Competence Center GmbH, Munich
# Copyright (C) 2024 ParTec AG, Munich
#
# This file may be distributed under the terms of the Q Public License
# as defined in the file LICENSE.QPL included in the packaging of this
# file.
#
include $(top_srcdir)/common.am

SUBDIRS = include pspam

if PAM_ENABLED
SUBDIRS += module service
endif
