#
# ParaStation
#
# Copyright (C) 2014-2019 ParTec Cluster Competence Center GmbH, Munich
#
# This file may be distributed under the terms of the Q Public License
# as defined in the file LICENSE.QPL included in the packaging of this
# file.
#
include $(top_srcdir)/common.am

SUBDIRS = doc src/common src/psslurm

if SPANK_ENABLED
SUBDIRS += src/spank
endif
